Simplify and condense Javadoc comments across HTTP client, registry, and config classes, removing redundant sections and clarifying key points.